# routing-graph-packager

./: .coveragerc  .docker_env  .dockerignore  .env  .flaskenv  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESCRIPTION.md  Dockerfile  README.md  bit_proxy_root_ca.cer  cli.py  config.py  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.save  docker-entrypoint.sh  gunicorn.py  http_app.py  main.py  pyproject.toml  setup.cfg  test.py  test_pg.py  tox.ini
.github/workflows/: ci-linux-macos.yml  ci-ubuntu.yml  publish_image.yml  test-ubuntu.yml
app/: __init__.py  cmd_utils.py  db_utils.py  logger.py
app/api_v1/: __init__.py  __version__.py
app/api_v1/jobs/: __init__.py  models.py  resources.py
app/api_v1/users/: __init__.py  models.py  resources.py
app/auth/: basic_auth.py
app/core/geometries/: geom_conversions.py
app/core/routers/: valhalla.py
ciso_reports/: create_report.sh  csv.tmpl
conf/: valhalla.conf
cron/: routing_packager_daily.sh  routing_packager_monthly.sh  routing_packager_update_osm.sh  routing_packager_weekly.sh
kadas_routing_http/: __init__.py  cli.py  cmd_utils.py  constants.py  db_utils.py  file_utils.py  logger.py  tasks.py
kadas_routing_http/api_v1/: __init__.py  __version__.py
kadas_routing_http/api_v1/jobs/: __init__.py  models.py  resources.py  validate.py
kadas_routing_http/api_v1/users/: __init__.py  models.py  resources.py
kadas_routing_http/auth/: basic_auth.py
kadas_routing_http/core/geometries/: geom_conversions.py
kadas_routing_http/core/routers/: __init__.py  router_base.py  valhalla.py
migrations/: env.py
migrations/versions/: bdf04dd7a589_.py
routing_packager_app/: __init__.py  cli.py  config.py  constants.py  db.py  logger.py  osmium.py  tasks.py  test.py  worker.py
routing_packager_app/api_v1/: __init__.py  __version__.py  auth.py  dependencies.py  models.py
routing_packager_app/api_v1/jobs/: __init__.py  models.py  resources.py  schemas.py  validate.py
routing_packager_app/api_v1/models/: jobs.py  users.py
routing_packager_app/api_v1/routes/: api_keys.py  jobs.py  logs.py  users.py
routing_packager_app/api_v1/users/: __init__.py  models.py  resources.py  validate.py
routing_packager_app/auth/: basic_auth.py
routing_packager_app/routers/: __init__.py  router_base.py  valhalla.py
routing_packager_app/utils/: cmd_utils.py  db_utils.py  file_utils.py  geom_utils.py  valhalla_utils.py
scripts/: build_loop.sh  docker-entrypoint.sh  routing_packager_update_osm.sh  run_valhalla.sh  update_osm.sh
ssl/: .gitignore  gwdg_root_cert.pem
static/: index.html
tests/: __init__.py  conftest.py  env  test_app_creation.py  test_cli.py  test_dependencies.py  test_geometry_utils.py  test_osmium.py  test_tasks.py  test_users.py  test_worker.py  utils.py  utils_.py
tests/api_keys/: conftest.py  test_keys.py
tests/data/: .gitignore  liechtenstein-201109.tomtom.pbf
tests/data/andorra_tiles/0/003/: 015.gph
tests/data/andorra_tiles/1/047/: 701.gph
tests/data/andorra_tiles/2/000/762/: 485.gph  486.gph
tests/data/andorra_tiles/2/000/763/: 925.gph  926.gph  927.gph
tests/data/here/: andorra-200827.osm.pbf
tests/jobs/: conftest.py  test_jobs.py  test_worker.py
tests/users/: conftest.py  test_users.py
tests/utils/: test_valhalla.py
