[tool.poetry]
name = "routing-graph-packager"
version = "1.0.0b"
description = "Backend to generate packages of routing graphs for FOSS routing engines in a job queue."
authors = ["Nils Nolde <nils@gis-ops.com>"]
license = "MIT"
packages = [{ include = "routing_packager_app" }]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "2.0.30"
GeoAlchemy2 = "^0.11.1"
wheel = "^0.37.1"
python-dotenv = "^1.0.1"
requests = "^2.27.1"
sqlalchemy-utils = "^0.38.2"
passlib = "^1.7.4"
shapely = "^2.0.4"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
fastapi = "^0.111.0"
sqlmodel = "0.0.18"
arq = "^0.25.0"
anyio = "^3.0.0"                                         # some anyio breaking change in 4.x breaks starlette's testclient
uvicorn = { extras = ["standard"], version = "^0.20.0" }
pydantic = "^2.7.1"
osmium = "^3.5.0"
pydantic-settings = "^2.2.1"
bump-pydantic = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^3.0.0"
pytest-httpserver = "^1.0.6"
pre-commit = "^2.17.0"
coverage = "^6.3.2"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 105
exclude = '''
/(
    \.git
  | \.venv
  | dist
  | build
)/
'''
