[tool.setuptools]
packages = ["routing_packager_app"]

[project]
name = "routing-graph-packager"
version = "1.0.0b"
description = "Backend to generate packages of routing graphs for FOSS routing engines in a job queue."
authors = [
 { name = "Nils Nolde", email = "nils@gis-ops.com" },
 { name = "Christian Beiwinkel", email = "chrstn@bwnkl.de" },
]
license = "MIT"
requires-python = ">= 3.12"
dependencies = [
    "anyio>=4.9.0",
    "arq>=0.26.3",
    "bump-pydantic>=0.8.0",
    "fastapi>=0.115.12",
    "geoalchemy2>=0.17.1",
    "gunicorn>=23.0.0",
    "osmium>=4.0.2",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
    "bcrypt>=4.3.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "coveralls>=4.0.1",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-httpserver>=1.1.3",
    "ruff>=0.11.12",
]

[tool.ruff]

extend-exclude = [".venv", "third_party", "build"]
lint.preview = true

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F", "RUF022"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
  "RUF022",
]
lint.unfixable = []
format.preview = true
line-length = 105

